--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,66 @@
 # Godot 4+ specific ignores
 .godot/
-.nomedia
+!.godot/icon.svg
+!.godot/icon.svg.import
+!.godot/project_logo.svg
+!.godot/project_logo.svg.import
 
-# Godot-specific ignores
-.import/
-export.cfg
-export_credentials.cfg
+# Godot 3 specific ignores (if you decide to use Godot 3 for some reason)
+#.import/
+#export.cfg
+#export_presets.cfg
 
-# Imported translations (automatically generated from CSV files)
-*.translation
+# General
+*.o
+*.lo
+*.la
+*.so
+*.a
+*.dylib
+*.obj
+*.pch
+*.lib
+*.app
+*.exe
+*.dll
+*.pyc
+*.pyo
+*.pyd
+*.cproject
+*.creator
+*.sln
+*.suo
+*.opened
+*.prefs
+*.sublime-*
+*.user
+*.pro.user
+*.kdev4
+*.kate_complete_save
+*.DS_Store
+*~
+*.swp
+*.swo
 
-# Mono-specific ignores
-.mono/
-data_*/
-mono_crash.*.json
+# Mono/C# specific (if you decide to use C# with Godot)
+#mono/
+#bin/
+#obj/
+#*.csproj
+#*. solución
+#msbuild.log
+#msbuild.err
+#msbuild.wrn
+
+# Asset files (optional, if you want to keep your source art files out of the repo,
+# but generally it's good to have them if they are not excessively large)
+# *.aseprite
+# *.blend
+# *.kra
+# *.psd
+# *.xcf
+
+# Exported game files (these should definitely be ignored)
+# /builds/
+# /dist/
+# /export/
